Bug 239074 - Input in text fields is lost when going back in history with konqueror/webkit
Summary: Input in text fields is lost when going back in history with konqueror/webkit
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-28 01:19 UTC by Richard Hartmann
Modified: 2010-06-01 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Hartmann 2010-05-28 01:19:28 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

When you fill out any form, click submit and go back in your history to the form, all data is gone.

This is especially bad when you get an error and need to re-submit your data as you lose all input. Depending on what you did, that can mean a _lot_ of lost work.

Reproducible: Always

Steps to Reproduce:
1) Open Konqueror
2) Go to any site which has a web form
3) Enter some data into the form.
4) Click submit
5) Go back in history


Actual Results:  
Your input is lost

Expected Results:  
Your input is in the form
Comment 1 Richard Hartmann 2010-05-28 01:20:46 UTC
PS: KHTML does not have this problem, thus this is a regression.
Comment 2 Dawit Alemayehu 2010-05-31 17:07:09 UTC
That should not be the case because I have implemented this feature already. What version of kwebkitpart is installed on your system ? It should be kwebkitpart.so.0.9.0...
Comment 3 Richard Hartmann 2010-05-31 17:11:22 UTC
It was on a pretty up-to-date Debian unstable so according to [1] it would have been [2] kpart-webkit (0.9svn1123738-1). I can look it up at home, if you want.

[1] http://packages.debian.org/search?keywords=webkit
[2] http://packages.debian.org/sid/kpart-webkit
Comment 4 Dawit Alemayehu 2010-05-31 23:06:36 UTC
(In reply to comment #3)
> It was on a pretty up-to-date Debian unstable so according to [1] it would have
> been [2] kpart-webkit (0.9svn1123738-1). I can look it up at home, if you want.
> 
> [1] http://packages.debian.org/search?keywords=webkit
> [2] http://packages.debian.org/sid/kpart-webkit

I think that is recent enough for my statement above to apply... I think I know the issue here. Currently KWebKitPart will only restore "textarea" and text input widgets. IOW, it does not restore list and check boxes or file input widgets. Is that your issue ? Otherwise, it works fine for me as tested on this very same bug report page...
Comment 5 Richard Hartmann 2010-06-01 08:27:20 UTC
I seem to be unable to think of a web form where I can enter stuff without affecting anything.
In any case, here are my webkit-related packages.

ii  kpart-webkit                         0.9svn1123738-1                WebKit KPart
ii  libkdewebkit5                        4:4.4.3-2                      the KDE WebKit Library
ii  libkwebkit1                          0.9svn1123738-1                KDE bindings for WebKit
ii  libqt4-webkit                        4:4.6.2-5                      Qt 4 WebKit module
ii  libwebkit-1.0-2                      1.2.1-2                        Web content engine library for Gtk+
ii  libwebkit-1.0-common                 1.2.1-2                        Web content engine library for Gtk+ - data files
ii  plasma-scriptengine-webkit           4:4.4.3-1                      Web and Mac OS X dashboard widget support for Plasma
Comment 6 Dawit Alemayehu 2010-06-01 17:42:21 UTC
SVN commit 1133365 by adawit:

- Fixed bugs and enhanced restoration of data in input elements when going back in navigation history.
- Added support for conditional completed to allow user to cancel scheduled page refresh. This feature
  will be activated only when kwebkitpart is compiled against Qt 4.7.

BUG:239074


 M  +4 -3      kwebkitpart.cpp  
 M  +91 -24    kwebkitpart_ext.cpp  
 M  +27 -24    kwebkitpart_p.cpp  
 M  +1 -3      webpage.cpp  
 M  +2 -2      webpage.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1133365