- Fixed bugs and enhanced restoration of data in input elements when going back in navigation history. - Added support for conditional completed to allow user to cancel scheduled page refresh. This feature   will be activated only when kwebkitpart is compiled against Qt 4.7.

BUG:239074